Added input form to urls_show

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -11,9 +11,12 @@
     <a href="http://localhost:8080/urls/">back</a>
     <ul>
     <li><%= shortURL %> - <%= fullURL %></li>
-
-
-
     </ul>
+
+<form method="POST" action="/urls/:id">
+    <input type ="text" name ="longURL"></input>
+    <button style="submit" value="Enter old URL...">Change Shortlink</button>
+</form>
+
 </body>
 </html>
