on feature branch / adding username input form

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -5,5 +5,13 @@
 </head>
 <body>
   <h1>TINY FLAP</h1>
+
+  <h3>Enter Username</h3>
+  <form action="/login" method="POST">
+    <input type="text" name="username" placeholder="Username..."></input>
+    <button type="submit">Sign in</button>
+  </form>
+
+
 </body>
 </html>
