added username visible in header

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -5,7 +5,7 @@
 </head>
 <body>
   <h1>TINY FLAP</h1>
-
+  <h2>Hey <%= username %></h2>
   <h3>Enter Username</h3>
   <form action="/login" method="POST">
     <input type="text" name="username" placeholder="Username..."></input>
