made username and logout button conditional on cookies

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -5,13 +5,24 @@
 </head>
 <body>
   <h1>TINY FLAP</h1>
-  <h2>Hey <%= username %></h2>
+
+<% if ( username ) { %>
+   <h1>Hey <%= username %></h1>
+   <form action="/logout" method="POST">
+    <button type="submit">Logout</button>
+  </form>
+<% } else { %>
   <h3>Enter Username</h3>
   <form action="/login" method="POST">
     <input type="text" name="username" placeholder="Username..."></input>
     <button type="submit">Sign in</button>
+ <% } %>
+
   </form>
 
 
 </body>
 </html>
+
+
+
