added registration page now with cookies

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,9 +8,9 @@
   <% include partials/_header %>
 </header>
 <br>
-  <form>
-    <H3>Create an account</H3>
-    <input type="email" name="emailaddress" placeholder="email address..."></input><br>
+  <form action="/register" method="POST">
+    <H3>GET TO THE CHOPPA!</H3>
+    <input type="email" name="email" placeholder="email address..."></input><br>
       <input type="password" name="password" placeholder="password"></input><br>
     <button type="submit">Register</button>
   </form>
