--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,7 +9,7 @@
 </header>
 <br>
   <form action="/register" method="POST">
-    <H3>GET TO THE CHOPPA!</H3>
+    <H3>Sign up here</H3>
     <input type="email" name="email" placeholder="email address..."></input><br>
       <input type="password" name="password" placeholder="password"></input><br>
     <button type="submit">Register</button>
