--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -6,20 +6,26 @@
 <body>
   <h1>TINY FLAP</h1>
 
+
   <% if ( user_object ) { %>
     <h1>Hey <%= user_object["email"] %></h1>
     <form action="/logout" method="POST">
       <button type="submit">Logout</button>
     </form>
   <% } else { %>
-    <h3>Enter Username</h3>
+<!--     <h3>Enter Username</h3>
     <form action="/login" method="POST">
       <input type="text" name="username" placeholder="Username..."></input>
       <button type="submit">Sign in</button>
-    </form>
-
+    </form> -->
+  <h3><a href="/register">Register here</a></h3>
+  <h3><a href="/login">Login here</a></h3>
   <% } %>
 
+
+
+
+<h3>This is the end of the header, fyi</h3>
 
 
 </body>
