added user id to url database objects - partially working

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -22,5 +22,8 @@
         </li>
       <% }; %>
     </ul>
+    <form action="/urls/new" method="GET">
+  <button style="submit">New URL</button>
+</form>
 </body>
 </html>
