--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -10,7 +10,7 @@
 </header>
     <a href="http://localhost:8080/urls/">back</a>
     <ul>
-    <li><%= shortURL %> - <%= fullURL %></li>
+    <li><%= shortURL %> - <%= longURL %></li>
     </ul>
 
 <form method="POST" action="/urls/<%= shortURL %>/update">
