--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -15,7 +15,7 @@
 
 <form method="POST" action="/urls/<%= shortURL %>/update">
     <input type ="text" name ="longURL"></input>
-    <button type="submit" value="Enter old URL...">Change Shortlink</button>
+    <button type="submit" value="Enter old URL...">Change URL</button>
 </form>
 
 </body>
